# zlmfit

./: .gitignore  .justfile  pyproject.toml
src/zlmfit/: data_binner.py  data_binner.tcss  fit_data.py  fit_menu.py  fit_menu.tcss  fitting_screen.py  fitting_screen.tcss  main.py  main_menu.py  main_menu.tcss  new_menu.py  new_menu.tcss  wave_menu.py  wave_menu.tcss
src/zlmfit/popups/: file_menu.py
src/zlmfit/widgets/: file_selector.py  histogram.py
