[project]
name = "zlmfit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "corner>=2.2.3",
    "laddu>=0.1.15",
    "matplotlib>=3.10.0",
    "numpy>=2.2.0",
    "plotext>=5.3.2",
    "textual>=1.0.0",
]

[project.scripts]
zlmfit = "zlmfit.main:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
where = ["src/"]

[tool.uv]
dev-dependencies = [
    "textual-dev>=1.7.0",
    "textual[dev]>=1.0.0",
]
